# AlphaTherapy

./: README.md
Analysis/: Output.root  Output2.root  OutputTuplesAnalysis.root  decayDataAnalysis.C  decayDataPlotting.py  energyDepsHist.C  examplesDraw.C  mainAnalysisCode.cpp  mainAnalysisCode.hh  outputMainAnalysisCode.root  outputMainAnalysisCode_100kBq.root  outputMainAnalysisCode_10kBq.root  outputMainAnalysisCode_150kBq.root  outputMainAnalysisCode_25kBq.root  outputMainAnalysisCode_50kBq.root  outputMainAnalysisCode_5kBq.root  outputMainAnalysisCode_75kBq.root  test.root  tuplesAnalysis.cpp
Analysis/AnalysisCode/: Makefile  combine  combineHistogramCases.cpp  jobScript_Combine.sh  jobscript_C4_2.sh  jobscript_C4_2_D12CP.sh  jobscript_C4_2_D12RP.sh  jobscript_C4_2_D5CP.sh  jobscript_C4_2_D5RP.sh  jobscript_PC3_Flu.sh  jobscript_PC3_Flu_D12CP.sh  jobscript_PC3_Flu_D12CP_Case1.sh  jobscript_PC3_Flu_D12CP_Case2.sh  jobscript_PC3_Flu_D12RP.sh  jobscript_PC3_Flu_D12RP_Case1.sh  jobscript_PC3_Flu_D12RP_Case2.sh  jobscript_PC3_Flu_D5CP.sh  jobscript_PC3_Flu_D5CP_Case1.sh  jobscript_PC3_Flu_D5CP_Case2.sh  jobscript_PC3_Flu_D5RP.sh  jobscript_PC3_Flu_D5RP_Case1.sh  jobscript_PC3_Flu_D5RP_Case2.sh  jobscript_PC3_PIP.sh  jobscript_PC3_PIP_D12CP.sh  jobscript_PC3_PIP_D12CP_Case1.sh  jobscript_PC3_PIP_D12CP_Case2.sh  jobscript_PC3_PIP_D12CP_Case3.sh  jobscript_PC3_PIP_D12CP_Case4.sh  jobscript_PC3_PIP_D12RP.sh  jobscript_PC3_PIP_D12RP_Case1.sh  jobscript_PC3_PIP_D12RP_Case2.sh  jobscript_PC3_PIP_D12RP_Case3.sh  jobscript_PC3_PIP_D12RP_Case4.sh  jobscript_PC3_PIP_D5CP.sh  jobscript_PC3_PIP_D5CP_Case1.sh  jobscript_PC3_PIP_D5CP_Case2.sh  jobscript_PC3_PIP_D5CP_Case3.sh  jobscript_PC3_PIP_D5CP_Case4.sh  jobscript_PC3_PIP_D5RP.sh  jobscript_PC3_PIP_D5RP_Case1.sh  (+9 more)
Analysis/FittingCode/: Output_AnalyseCellSurvival_C4_2_Cytoplasm_LM.root  Output_AnalyseCellSurvival_C4_2_Cytoplasm_LQ.root  Output_AnalyseCellSurvival_C4_2_Membrane_LM.root  Output_AnalyseCellSurvival_C4_2_Membrane_LQ.root  Output_AnalyseCellSurvival_C4_2_Nucleus_LM.root  Output_AnalyseCellSurvival_C4_2_Nucleus_LQ.root  Output_AnalyseCellSurvival_C4_2_TotalCell_LM.root  Output_AnalyseCellSurvival_C4_2_TotalCell_LQ.root  Output_AnalyseCellSurvival_PC3_Flu_Cytoplasm_LM.root  Output_AnalyseCellSurvival_PC3_Flu_Membrane_LM.root  Output_AnalyseCellSurvival_PC3_Flu_Nucleus_LM.root  Output_AnalyseCellSurvival_PC3_Flu_TotalCell_LM.root  Output_AnalyseCellSurvival_PC3_PIP_Cytoplasm_LM.root  Output_AnalyseCellSurvival_PC3_PIP_Membrane_LM.root  Output_AnalyseCellSurvival_PC3_PIP_Nucleus_LM.root  Output_AnalyseCellSurvival_PC3_PIP_TotalCell_LM.root  main  main.cpp  mainFittingCode.cpp  mainFittingCode_cpp.d  mainFittingCode_cpp_ACLiC_dict_rdict.pcm
Analysis/FittingCode2/: mainFittingCode.cpp  mainFittingCode_cpp.d  mainFittingCode_cpp_ACLiC_dict_rdict.pcm
GEANT4Simulations/: MakeGraphs.cpp  Output_NumberDecays_C4_2.csv  Output_NumberDecays_PC3_Flu.csv  Output_NumberDecays_PC3_PIP.csv  TimeAndFileSizes.txt  numberEventsNeeded.cpp
GEANT4Simulations/B4aCytoplasm/: exampleB4a.cc  jobScript.sh  run1.mac
GEANT4Simulations/B4aMembrane/: exampleB4a.cc  run1.mac
GEANT4Simulations/B4aSolution/: exampleB4a.cc  init_vis.mac  jobScript.sh  run1.mac  vis.mac
GEANT4Simulations/BraggPeakSimulation/: CMakeLists.txt  Run1.mac  Run2.mac  jobScript_Bragg.sh
GEANT4Simulations/BraggPeakSimulation/include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  SteppingAction.hh
GEANT4Simulations/BraggPeakSimulation/src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc
GEANT4Simulations/CellDamageSimulation/: CMakeLists.txt  Run_C4_2_0.mac  Run_C4_2_1.mac  Run_C4_2_10.mac  Run_C4_2_11.mac  Run_C4_2_12.mac  Run_C4_2_13.mac  Run_C4_2_14.mac  Run_C4_2_15.mac  Run_C4_2_16.mac  Run_C4_2_17.mac  Run_C4_2_18.mac  Run_C4_2_19.mac  Run_C4_2_2.mac  Run_C4_2_20.mac  Run_C4_2_3.mac  Run_C4_2_4.mac  Run_C4_2_5.mac  Run_C4_2_6.mac  Run_C4_2_7.mac  Run_C4_2_8.mac  Run_C4_2_9.mac  Run_C4_2_Cytoplasm_Case_0.mac  Run_C4_2_Cytoplasm_Case_1.mac  Run_C4_2_Cytoplasm_Case_10.mac  Run_C4_2_Cytoplasm_Case_107.mac  Run_C4_2_Cytoplasm_Case_11.mac  Run_C4_2_Cytoplasm_Case_112.mac  Run_C4_2_Cytoplasm_Case_12.mac  Run_C4_2_Cytoplasm_Case_127.mac  Run_C4_2_Cytoplasm_Case_13.mac  Run_C4_2_Cytoplasm_Case_14.mac  Run_C4_2_Cytoplasm_Case_142.mac  Run_C4_2_Cytoplasm_Case_15.mac  Run_C4_2_Cytoplasm_Case_16.mac  Run_C4_2_Cytoplasm_Case_17.mac  Run_C4_2_Cytoplasm_Case_171.mac  Run_C4_2_Cytoplasm_Case_172.mac  Run_C4_2_Cytoplasm_Case_18.mac  Run_C4_2_Cytoplasm_Case_19.mac  (+798 more)
GEANT4Simulations/CellDamageSimulation/include/: EventAction.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunMessenger.hh  SteppingAction.hh
GEANT4Simulations/CellDamageSimulation/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunMessenger.cc  SteppingAction.cc
GEANT4Simulations/CellDamageSimulation_D12CP/: CMakeLists.txt  Run_C4_2_Cytoplasm_Case_10.mac  Run_C4_2_Cytoplasm_Case_100.mac  Run_C4_2_Cytoplasm_Case_101.mac  Run_C4_2_Cytoplasm_Case_105.mac  Run_C4_2_Cytoplasm_Case_115.mac  Run_C4_2_Cytoplasm_Case_120.mac  Run_C4_2_Cytoplasm_Case_125.mac  Run_C4_2_Cytoplasm_Case_129.mac  Run_C4_2_Cytoplasm_Case_130.mac  Run_C4_2_Cytoplasm_Case_134.mac  Run_C4_2_Cytoplasm_Case_137.mac  Run_C4_2_Cytoplasm_Case_14.mac  Run_C4_2_Cytoplasm_Case_152.mac  Run_C4_2_Cytoplasm_Case_154.mac  Run_C4_2_Cytoplasm_Case_161.mac  Run_C4_2_Cytoplasm_Case_175.mac  Run_C4_2_Cytoplasm_Case_179.mac  Run_C4_2_Cytoplasm_Case_180.mac  Run_C4_2_Cytoplasm_Case_182.mac  Run_C4_2_Cytoplasm_Case_183.mac  Run_C4_2_Cytoplasm_Case_184.mac  Run_C4_2_Cytoplasm_Case_192.mac  Run_C4_2_Cytoplasm_Case_199.mac  Run_C4_2_Cytoplasm_Case_2.mac  Run_C4_2_Cytoplasm_Case_203.mac  (+744 more)
Mathematica/: 212PbDecayDynamics.nb  InterpolatedUptake_C4_2.csv  InterpolatedUptake_PC3_PIP.csv  MyVersion.nb  makeUptakeInterpolated.cpp
(+4860 files in other folders)
