#----------------------------------------------------------------------------
# Setup the project
#
cmake_minimum_required(VERSION 3.16...3.21)
project(B4a)

#----------------------------------------------------------------------------
# Find Geant4 package, activating all available UI and Vis drivers by default
# You can set WITH_GEANT4_UIVIS to OFF via the command line or ccmake/cmake-gui
# to build a batch mode only executable
#
option(WITH_GEANT4_UIVIS "Build example with Geant4 UI and Vis drivers" ON)
if(WITH_GEANT4_UIVIS)
  find_package(Geant4 REQUIRED ui_all vis_all)
else()
  find_package(Geant4 REQUIRED)
endif()

#----------------------------------------------------------------------------
# Find ROOT (required package)
#
find_package(ROOT REQUIRED)


#----------------------------------------------------------------------------
# Setup Geant4 include directories and compile definitions
# Setup include directory for this project
#
include(${Geant4_USE_FILE})
include_directories(${PROJECT_SOURCE_DIR}/include ${ROOT_INCLUDE_DIRS})


#----------------------------------------------------------------------------
# Locate sources and headers for this project
# NB: headers are included so they will show up in IDEs
#
file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)

#----------------------------------------------------------------------------
# Add the executable, and link it to the Geant4 libraries
#
add_executable(exampleB4a exampleB4a.cc ${sources} ${headers})
target_link_libraries(exampleB4a ${Geant4_LIBRARIES} ${ROOT_LIBRARIES})

#----------------------------------------------------------------------------
# Copy all scripts to the build directory, i.e. the directory in which we
# build B4a. This is so that we can run the executable directly because it
# relies on these scripts being in the current working directory.
#
set(EXAMPLEB4A_SCRIPTS
    exampleB4a.out
    exampleB4.in
    gui.mac
    init_vis.mac
    plotHisto.C
    Run_C4_2_Solution_Case_0.mac
    Run_C4_2_Solution_Case_1.mac
    Run_C4_2_Solution_Case_2.mac
    Run_C4_2_Solution_Case_3.mac
    Run_C4_2_Solution_Case_4.mac
    Run_C4_2_Solution_Case_5.mac
    Run_C4_2_Solution_Case_6.mac
    Run_C4_2_Solution_Case_7.mac
    Run_C4_2_Solution_Case_8.mac
    Run_C4_2_Solution_Case_9.mac
    Run_C4_2_Membrane_Case_0.mac
    Run_C4_2_Membrane_Case_1.mac
    Run_C4_2_Membrane_Case_2.mac
    Run_C4_2_Membrane_Case_3.mac
    Run_C4_2_Membrane_Case_4.mac
    Run_C4_2_Membrane_Case_5.mac
    Run_C4_2_Membrane_Case_6.mac
    Run_C4_2_Membrane_Case_7.mac
    Run_C4_2_Membrane_Case_8.mac
    Run_C4_2_Membrane_Case_9.mac
    Run_C4_2_Cytoplasm_Case_0.mac
    Run_C4_2_Cytoplasm_Case_1.mac
    Run_C4_2_Cytoplasm_Case_2.mac
    Run_C4_2_Cytoplasm_Case_3.mac
    Run_C4_2_Cytoplasm_Case_4.mac
    Run_C4_2_Cytoplasm_Case_5.mac
    Run_C4_2_Cytoplasm_Case_6.mac
    Run_C4_2_Cytoplasm_Case_7.mac
    Run_C4_2_Cytoplasm_Case_8.mac
    Run_C4_2_Cytoplasm_Case_9.mac
    Run_C4_2_Solution_Case_10.mac
    Run_C4_2_Solution_Case_11.mac
    Run_C4_2_Solution_Case_12.mac
    Run_C4_2_Solution_Case_13.mac
    Run_C4_2_Solution_Case_14.mac
    Run_C4_2_Solution_Case_15.mac
    Run_C4_2_Solution_Case_16.mac
    Run_C4_2_Solution_Case_17.mac
    Run_C4_2_Solution_Case_18.mac
    Run_C4_2_Solution_Case_19.mac
    Run_C4_2_Membrane_Case_10.mac
    Run_C4_2_Membrane_Case_11.mac
    Run_C4_2_Membrane_Case_12.mac
    Run_C4_2_Membrane_Case_13.mac
    Run_C4_2_Membrane_Case_14.mac
    Run_C4_2_Membrane_Case_15.mac
    Run_C4_2_Membrane_Case_16.mac
    Run_C4_2_Membrane_Case_17.mac
    Run_C4_2_Membrane_Case_18.mac
    Run_C4_2_Membrane_Case_19.mac
    Run_C4_2_Cytoplasm_Case_10.mac
    Run_C4_2_Cytoplasm_Case_11.mac
    Run_C4_2_Cytoplasm_Case_12.mac
    Run_C4_2_Cytoplasm_Case_13.mac
    Run_C4_2_Cytoplasm_Case_14.mac
    Run_C4_2_Cytoplasm_Case_15.mac
    Run_C4_2_Cytoplasm_Case_16.mac
    Run_C4_2_Cytoplasm_Case_17.mac
    Run_C4_2_Cytoplasm_Case_18.mac
    Run_C4_2_Cytoplasm_Case_19.mac
    Run_C4_2_Solution_Case_20.mac
    Run_C4_2_Solution_Case_21.mac
    Run_C4_2_Solution_Case_22.mac
    Run_C4_2_Solution_Case_23.mac
    Run_C4_2_Solution_Case_24.mac
    Run_C4_2_Solution_Case_25.mac
    Run_C4_2_Solution_Case_26.mac
    Run_C4_2_Solution_Case_27.mac
    Run_C4_2_Solution_Case_28.mac
    Run_C4_2_Solution_Case_29.mac
    Run_C4_2_Membrane_Case_20.mac
    Run_C4_2_Membrane_Case_21.mac
    Run_C4_2_Membrane_Case_22.mac
    Run_C4_2_Membrane_Case_23.mac
    Run_C4_2_Membrane_Case_24.mac
    Run_C4_2_Membrane_Case_25.mac
    Run_C4_2_Membrane_Case_26.mac
    Run_C4_2_Membrane_Case_27.mac
    Run_C4_2_Membrane_Case_28.mac
    Run_C4_2_Membrane_Case_29.mac
    Run_C4_2_Cytoplasm_Case_20.mac
    Run_C4_2_Cytoplasm_Case_21.mac
    Run_C4_2_Cytoplasm_Case_22.mac
    Run_C4_2_Cytoplasm_Case_23.mac
    Run_C4_2_Cytoplasm_Case_24.mac
    Run_C4_2_Cytoplasm_Case_25.mac
    Run_C4_2_Cytoplasm_Case_26.mac
    Run_C4_2_Cytoplasm_Case_27.mac
    Run_C4_2_Cytoplasm_Case_28.mac
    Run_C4_2_Cytoplasm_Case_29.mac
    Run_C4_2_Solution_Case_30.mac
    Run_C4_2_Solution_Case_31.mac
    Run_C4_2_Solution_Case_32.mac
    Run_C4_2_Solution_Case_33.mac
    Run_C4_2_Solution_Case_34.mac
    Run_C4_2_Solution_Case_35.mac
    Run_C4_2_Solution_Case_36.mac
    Run_C4_2_Solution_Case_37.mac
    Run_C4_2_Solution_Case_38.mac
    Run_C4_2_Solution_Case_39.mac
    Run_C4_2_Membrane_Case_30.mac
    Run_C4_2_Membrane_Case_31.mac
    Run_C4_2_Membrane_Case_32.mac
    Run_C4_2_Membrane_Case_33.mac
    Run_C4_2_Membrane_Case_34.mac
    Run_C4_2_Membrane_Case_35.mac
    Run_C4_2_Membrane_Case_36.mac
    Run_C4_2_Membrane_Case_37.mac
    Run_C4_2_Membrane_Case_38.mac
    Run_C4_2_Membrane_Case_39.mac
    Run_C4_2_Cytoplasm_Case_30.mac
    Run_C4_2_Cytoplasm_Case_31.mac
    Run_C4_2_Cytoplasm_Case_32.mac
    Run_C4_2_Cytoplasm_Case_33.mac
    Run_C4_2_Cytoplasm_Case_34.mac
    Run_C4_2_Cytoplasm_Case_35.mac
    Run_C4_2_Cytoplasm_Case_36.mac
    Run_C4_2_Cytoplasm_Case_37.mac
    Run_C4_2_Cytoplasm_Case_38.mac
    Run_C4_2_Cytoplasm_Case_39.mac
    Run_C4_2_Solution_Case_40.mac
    Run_C4_2_Solution_Case_41.mac
    Run_C4_2_Solution_Case_42.mac
    Run_C4_2_Solution_Case_43.mac
    Run_C4_2_Solution_Case_44.mac
    Run_C4_2_Solution_Case_45.mac
    Run_C4_2_Solution_Case_46.mac
    Run_C4_2_Solution_Case_47.mac
    Run_C4_2_Solution_Case_48.mac
    Run_C4_2_Solution_Case_49.mac
    Run_C4_2_Membrane_Case_40.mac
    Run_C4_2_Membrane_Case_41.mac
    Run_C4_2_Membrane_Case_42.mac
    Run_C4_2_Membrane_Case_43.mac
    Run_C4_2_Membrane_Case_44.mac
    Run_C4_2_Membrane_Case_45.mac
    Run_C4_2_Membrane_Case_46.mac
    Run_C4_2_Membrane_Case_47.mac
    Run_C4_2_Membrane_Case_48.mac
    Run_C4_2_Membrane_Case_49.mac
    Run_C4_2_Cytoplasm_Case_40.mac
    Run_C4_2_Cytoplasm_Case_41.mac
    Run_C4_2_Cytoplasm_Case_42.mac
    Run_C4_2_Cytoplasm_Case_43.mac
    Run_C4_2_Cytoplasm_Case_44.mac
    Run_C4_2_Cytoplasm_Case_45.mac
    Run_C4_2_Cytoplasm_Case_46.mac
    Run_C4_2_Cytoplasm_Case_47.mac
    Run_C4_2_Cytoplasm_Case_48.mac
    Run_C4_2_Cytoplasm_Case_49.mac
    Run_C4_2_Solution_Case_50.mac
    Run_C4_2_Solution_Case_51.mac
    Run_C4_2_Solution_Case_52.mac
    Run_C4_2_Solution_Case_53.mac
    Run_C4_2_Solution_Case_54.mac
    Run_C4_2_Solution_Case_55.mac
    Run_C4_2_Solution_Case_56.mac
    Run_C4_2_Solution_Case_57.mac
    Run_C4_2_Solution_Case_58.mac
    Run_C4_2_Solution_Case_59.mac
    Run_C4_2_Membrane_Case_50.mac
    Run_C4_2_Membrane_Case_51.mac
    Run_C4_2_Membrane_Case_52.mac
    Run_C4_2_Membrane_Case_53.mac
    Run_C4_2_Membrane_Case_54.mac
    Run_C4_2_Membrane_Case_55.mac
    Run_C4_2_Membrane_Case_56.mac
    Run_C4_2_Membrane_Case_57.mac
    Run_C4_2_Membrane_Case_58.mac
    Run_C4_2_Membrane_Case_59.mac
    Run_C4_2_Cytoplasm_Case_50.mac
    Run_C4_2_Cytoplasm_Case_51.mac
    Run_C4_2_Cytoplasm_Case_52.mac
    Run_C4_2_Cytoplasm_Case_53.mac
    Run_C4_2_Cytoplasm_Case_54.mac
    Run_C4_2_Cytoplasm_Case_55.mac
    Run_C4_2_Cytoplasm_Case_56.mac
    Run_C4_2_Cytoplasm_Case_57.mac
    Run_C4_2_Cytoplasm_Case_58.mac
    Run_C4_2_Cytoplasm_Case_59.mac
    Run_C4_2_Solution_Case_60.mac
    Run_C4_2_Solution_Case_61.mac
    Run_C4_2_Solution_Case_62.mac
    Run_C4_2_Solution_Case_63.mac
    Run_C4_2_Solution_Case_64.mac
    Run_C4_2_Solution_Case_65.mac
    Run_C4_2_Solution_Case_66.mac
    Run_C4_2_Solution_Case_67.mac
    Run_C4_2_Solution_Case_68.mac
    Run_C4_2_Solution_Case_69.mac
    Run_C4_2_Membrane_Case_60.mac
    Run_C4_2_Membrane_Case_61.mac
    Run_C4_2_Membrane_Case_62.mac
    Run_C4_2_Membrane_Case_63.mac
    Run_C4_2_Membrane_Case_64.mac
    Run_C4_2_Membrane_Case_65.mac
    Run_C4_2_Membrane_Case_66.mac
    Run_C4_2_Membrane_Case_67.mac
    Run_C4_2_Membrane_Case_68.mac
    Run_C4_2_Membrane_Case_69.mac
    Run_C4_2_Cytoplasm_Case_60.mac
    Run_C4_2_Cytoplasm_Case_61.mac
    Run_C4_2_Cytoplasm_Case_62.mac
    Run_C4_2_Cytoplasm_Case_63.mac
    Run_C4_2_Cytoplasm_Case_64.mac
    Run_C4_2_Cytoplasm_Case_65.mac
    Run_C4_2_Cytoplasm_Case_66.mac
    Run_C4_2_Cytoplasm_Case_67.mac
    Run_C4_2_Cytoplasm_Case_68.mac
    Run_C4_2_Cytoplasm_Case_69.mac
    Run_C4_2_Solution_Case_70.mac
    Run_C4_2_Solution_Case_71.mac
    Run_C4_2_Solution_Case_72.mac
    Run_C4_2_Solution_Case_73.mac
    Run_C4_2_Solution_Case_74.mac
    Run_C4_2_Solution_Case_75.mac
    Run_C4_2_Solution_Case_76.mac
    Run_C4_2_Solution_Case_77.mac
    Run_C4_2_Solution_Case_78.mac
    Run_C4_2_Solution_Case_79.mac
    Run_C4_2_Membrane_Case_70.mac
    Run_C4_2_Membrane_Case_71.mac
    Run_C4_2_Membrane_Case_72.mac
    Run_C4_2_Membrane_Case_73.mac
    Run_C4_2_Membrane_Case_74.mac
    Run_C4_2_Membrane_Case_75.mac
    Run_C4_2_Membrane_Case_76.mac
    Run_C4_2_Membrane_Case_77.mac
    Run_C4_2_Membrane_Case_78.mac
    Run_C4_2_Membrane_Case_79.mac
    Run_C4_2_Cytoplasm_Case_70.mac
    Run_C4_2_Cytoplasm_Case_71.mac
    Run_C4_2_Cytoplasm_Case_72.mac
    Run_C4_2_Cytoplasm_Case_73.mac
    Run_C4_2_Cytoplasm_Case_74.mac
    Run_C4_2_Cytoplasm_Case_75.mac
    Run_C4_2_Cytoplasm_Case_76.mac
    Run_C4_2_Cytoplasm_Case_77.mac
    Run_C4_2_Cytoplasm_Case_78.mac
    Run_C4_2_Cytoplasm_Case_79.mac
    Run_C4_2_Solution_Case_80.mac
    Run_C4_2_Solution_Case_81.mac
    Run_C4_2_Solution_Case_82.mac
    Run_C4_2_Solution_Case_83.mac
    Run_C4_2_Solution_Case_84.mac
    Run_C4_2_Solution_Case_85.mac
    Run_C4_2_Solution_Case_86.mac
    Run_C4_2_Solution_Case_87.mac
    Run_C4_2_Solution_Case_88.mac
    Run_C4_2_Solution_Case_89.mac
    Run_C4_2_Membrane_Case_80.mac
    Run_C4_2_Membrane_Case_81.mac
    Run_C4_2_Membrane_Case_82.mac
    Run_C4_2_Membrane_Case_83.mac
    Run_C4_2_Membrane_Case_84.mac
    Run_C4_2_Membrane_Case_85.mac
    Run_C4_2_Membrane_Case_86.mac
    Run_C4_2_Membrane_Case_87.mac
    Run_C4_2_Membrane_Case_88.mac
    Run_C4_2_Membrane_Case_89.mac
    Run_C4_2_Cytoplasm_Case_80.mac
    Run_C4_2_Cytoplasm_Case_81.mac
    Run_C4_2_Cytoplasm_Case_82.mac
    Run_C4_2_Cytoplasm_Case_83.mac
    Run_C4_2_Cytoplasm_Case_84.mac
    Run_C4_2_Cytoplasm_Case_85.mac
    Run_C4_2_Cytoplasm_Case_86.mac
    Run_C4_2_Cytoplasm_Case_87.mac
    Run_C4_2_Cytoplasm_Case_88.mac
    Run_C4_2_Cytoplasm_Case_89.mac
    Run_PC3_PIP_Solution_Case_0.mac
    Run_PC3_PIP_Solution_Case_1.mac
    Run_PC3_PIP_Solution_Case_2.mac
    Run_PC3_PIP_Solution_Case_3.mac
    Run_PC3_PIP_Solution_Case_4.mac
    Run_PC3_PIP_Solution_Case_5.mac
    Run_PC3_PIP_Solution_Case_6.mac
    Run_PC3_PIP_Solution_Case_7.mac
    Run_PC3_PIP_Solution_Case_8.mac
    Run_PC3_PIP_Solution_Case_9.mac
    Run_PC3_PIP_Membrane_Case_0.mac
    Run_PC3_PIP_Membrane_Case_1.mac
    Run_PC3_PIP_Membrane_Case_2.mac
    Run_PC3_PIP_Membrane_Case_3.mac
    Run_PC3_PIP_Membrane_Case_4.mac
    Run_PC3_PIP_Membrane_Case_5.mac
    Run_PC3_PIP_Membrane_Case_6.mac
    Run_PC3_PIP_Membrane_Case_7.mac
    Run_PC3_PIP_Membrane_Case_8.mac
    Run_PC3_PIP_Membrane_Case_9.mac
    Run_PC3_PIP_Cytoplasm_Case_0.mac
    Run_PC3_PIP_Cytoplasm_Case_1.mac
    Run_PC3_PIP_Cytoplasm_Case_2.mac
    Run_PC3_PIP_Cytoplasm_Case_3.mac
    Run_PC3_PIP_Cytoplasm_Case_4.mac
    Run_PC3_PIP_Cytoplasm_Case_5.mac
    Run_PC3_PIP_Cytoplasm_Case_6.mac
    Run_PC3_PIP_Cytoplasm_Case_7.mac
    Run_PC3_PIP_Cytoplasm_Case_8.mac
    Run_PC3_PIP_Cytoplasm_Case_9.mac
    Run_PC3_PIP_Solution_Case_10.mac
    Run_PC3_PIP_Solution_Case_11.mac
    Run_PC3_PIP_Solution_Case_12.mac
    Run_PC3_PIP_Solution_Case_13.mac
    Run_PC3_PIP_Solution_Case_14.mac
    Run_PC3_PIP_Solution_Case_15.mac
    Run_PC3_PIP_Solution_Case_16.mac
    Run_PC3_PIP_Solution_Case_17.mac
    Run_PC3_PIP_Solution_Case_18.mac
    Run_PC3_PIP_Solution_Case_19.mac
    Run_PC3_PIP_Membrane_Case_10.mac
    Run_PC3_PIP_Membrane_Case_11.mac
    Run_PC3_PIP_Membrane_Case_12.mac
    Run_PC3_PIP_Membrane_Case_13.mac
    Run_PC3_PIP_Membrane_Case_14.mac
    Run_PC3_PIP_Membrane_Case_15.mac
    Run_PC3_PIP_Membrane_Case_16.mac
    Run_PC3_PIP_Membrane_Case_17.mac
    Run_PC3_PIP_Membrane_Case_18.mac
    Run_PC3_PIP_Membrane_Case_19.mac
    Run_PC3_PIP_Cytoplasm_Case_10.mac
    Run_PC3_PIP_Cytoplasm_Case_11.mac
    Run_PC3_PIP_Cytoplasm_Case_12.mac
    Run_PC3_PIP_Cytoplasm_Case_13.mac
    Run_PC3_PIP_Cytoplasm_Case_14.mac
    Run_PC3_PIP_Cytoplasm_Case_15.mac
    Run_PC3_PIP_Cytoplasm_Case_16.mac
    Run_PC3_PIP_Cytoplasm_Case_17.mac
    Run_PC3_PIP_Cytoplasm_Case_18.mac
    Run_PC3_PIP_Cytoplasm_Case_19.mac
    Run_PC3_PIP_Solution_Case_20.mac
    Run_PC3_PIP_Solution_Case_21.mac
    Run_PC3_PIP_Solution_Case_22.mac
    Run_PC3_PIP_Solution_Case_23.mac
    Run_PC3_PIP_Solution_Case_24.mac
    Run_PC3_PIP_Solution_Case_25.mac
    Run_PC3_PIP_Solution_Case_26.mac
    Run_PC3_PIP_Solution_Case_27.mac
    Run_PC3_PIP_Solution_Case_28.mac
    Run_PC3_PIP_Solution_Case_29.mac
    Run_PC3_PIP_Membrane_Case_20.mac
    Run_PC3_PIP_Membrane_Case_21.mac
    Run_PC3_PIP_Membrane_Case_22.mac
    Run_PC3_PIP_Membrane_Case_23.mac
    Run_PC3_PIP_Membrane_Case_24.mac
    Run_PC3_PIP_Membrane_Case_25.mac
    Run_PC3_PIP_Membrane_Case_26.mac
    Run_PC3_PIP_Membrane_Case_27.mac
    Run_PC3_PIP_Membrane_Case_28.mac
    Run_PC3_PIP_Membrane_Case_29.mac
    Run_PC3_PIP_Cytoplasm_Case_20.mac
    Run_PC3_PIP_Cytoplasm_Case_21.mac
    Run_PC3_PIP_Cytoplasm_Case_22.mac
    Run_PC3_PIP_Cytoplasm_Case_23.mac
    Run_PC3_PIP_Cytoplasm_Case_24.mac
    Run_PC3_PIP_Cytoplasm_Case_25.mac
    Run_PC3_PIP_Cytoplasm_Case_26.mac
    Run_PC3_PIP_Cytoplasm_Case_27.mac
    Run_PC3_PIP_Cytoplasm_Case_28.mac
    Run_PC3_PIP_Cytoplasm_Case_29.mac
    Run_PC3_PIP_Solution_Case_30.mac
    Run_PC3_PIP_Solution_Case_31.mac
    Run_PC3_PIP_Solution_Case_32.mac
    Run_PC3_PIP_Solution_Case_33.mac
    Run_PC3_PIP_Solution_Case_34.mac
    Run_PC3_PIP_Solution_Case_35.mac
    Run_PC3_PIP_Solution_Case_36.mac
    Run_PC3_PIP_Solution_Case_37.mac
    Run_PC3_PIP_Solution_Case_38.mac
    Run_PC3_PIP_Solution_Case_39.mac
    Run_PC3_PIP_Membrane_Case_30.mac
    Run_PC3_PIP_Membrane_Case_31.mac
    Run_PC3_PIP_Membrane_Case_32.mac
    Run_PC3_PIP_Membrane_Case_33.mac
    Run_PC3_PIP_Membrane_Case_34.mac
    Run_PC3_PIP_Membrane_Case_35.mac
    Run_PC3_PIP_Membrane_Case_36.mac
    Run_PC3_PIP_Membrane_Case_37.mac
    Run_PC3_PIP_Membrane_Case_38.mac
    Run_PC3_PIP_Membrane_Case_39.mac
    Run_PC3_PIP_Cytoplasm_Case_30.mac
    Run_PC3_PIP_Cytoplasm_Case_31.mac
    Run_PC3_PIP_Cytoplasm_Case_32.mac
    Run_PC3_PIP_Cytoplasm_Case_33.mac
    Run_PC3_PIP_Cytoplasm_Case_34.mac
    Run_PC3_PIP_Cytoplasm_Case_35.mac
    Run_PC3_PIP_Cytoplasm_Case_36.mac
    Run_PC3_PIP_Cytoplasm_Case_37.mac
    Run_PC3_PIP_Cytoplasm_Case_38.mac
    Run_PC3_PIP_Cytoplasm_Case_39.mac
    Run_PC3_PIP_Solution_Case_40.mac
    Run_PC3_PIP_Solution_Case_41.mac
    Run_PC3_PIP_Solution_Case_42.mac
    Run_PC3_PIP_Solution_Case_43.mac
    Run_PC3_PIP_Solution_Case_44.mac
    Run_PC3_PIP_Solution_Case_45.mac
    Run_PC3_PIP_Solution_Case_46.mac
    Run_PC3_PIP_Solution_Case_47.mac
    Run_PC3_PIP_Solution_Case_48.mac
    Run_PC3_PIP_Solution_Case_49.mac
    Run_PC3_PIP_Membrane_Case_40.mac
    Run_PC3_PIP_Membrane_Case_41.mac
    Run_PC3_PIP_Membrane_Case_42.mac
    Run_PC3_PIP_Membrane_Case_43.mac
    Run_PC3_PIP_Membrane_Case_44.mac
    Run_PC3_PIP_Membrane_Case_45.mac
    Run_PC3_PIP_Membrane_Case_46.mac
    Run_PC3_PIP_Membrane_Case_47.mac
    Run_PC3_PIP_Membrane_Case_48.mac
    Run_PC3_PIP_Membrane_Case_49.mac
    Run_PC3_PIP_Cytoplasm_Case_40.mac
    Run_PC3_PIP_Cytoplasm_Case_41.mac
    Run_PC3_PIP_Cytoplasm_Case_42.mac
    Run_PC3_PIP_Cytoplasm_Case_43.mac
    Run_PC3_PIP_Cytoplasm_Case_44.mac
    Run_PC3_PIP_Cytoplasm_Case_45.mac
    Run_PC3_PIP_Cytoplasm_Case_46.mac
    Run_PC3_PIP_Cytoplasm_Case_47.mac
    Run_PC3_PIP_Cytoplasm_Case_48.mac
    Run_PC3_PIP_Cytoplasm_Case_49.mac
    Run_PC3_PIP_Solution_Case_50.mac
    Run_PC3_PIP_Solution_Case_51.mac
    Run_PC3_PIP_Solution_Case_52.mac
    Run_PC3_PIP_Solution_Case_53.mac
    Run_PC3_PIP_Solution_Case_54.mac
    Run_PC3_PIP_Solution_Case_55.mac
    Run_PC3_PIP_Solution_Case_56.mac
    Run_PC3_PIP_Solution_Case_57.mac
    Run_PC3_PIP_Solution_Case_58.mac
    Run_PC3_PIP_Solution_Case_59.mac
    Run_PC3_PIP_Membrane_Case_50.mac
    Run_PC3_PIP_Membrane_Case_51.mac
    Run_PC3_PIP_Membrane_Case_52.mac
    Run_PC3_PIP_Membrane_Case_53.mac
    Run_PC3_PIP_Membrane_Case_54.mac
    Run_PC3_PIP_Membrane_Case_55.mac
    Run_PC3_PIP_Membrane_Case_56.mac
    Run_PC3_PIP_Membrane_Case_57.mac
    Run_PC3_PIP_Membrane_Case_58.mac
    Run_PC3_PIP_Membrane_Case_59.mac
    Run_PC3_PIP_Cytoplasm_Case_50.mac
    Run_PC3_PIP_Cytoplasm_Case_51.mac
    Run_PC3_PIP_Cytoplasm_Case_52.mac
    Run_PC3_PIP_Cytoplasm_Case_53.mac
    Run_PC3_PIP_Cytoplasm_Case_54.mac
    Run_PC3_PIP_Cytoplasm_Case_55.mac
    Run_PC3_PIP_Cytoplasm_Case_56.mac
    Run_PC3_PIP_Cytoplasm_Case_57.mac
    Run_PC3_PIP_Cytoplasm_Case_58.mac
    Run_PC3_PIP_Cytoplasm_Case_59.mac
    Run_PC3_PIP_Solution_Case_60.mac
    Run_PC3_PIP_Solution_Case_61.mac
    Run_PC3_PIP_Solution_Case_62.mac
    Run_PC3_PIP_Solution_Case_63.mac
    Run_PC3_PIP_Solution_Case_64.mac
    Run_PC3_PIP_Solution_Case_65.mac
    Run_PC3_PIP_Solution_Case_66.mac
    Run_PC3_PIP_Solution_Case_67.mac
    Run_PC3_PIP_Solution_Case_68.mac
    Run_PC3_PIP_Solution_Case_69.mac
    Run_PC3_PIP_Membrane_Case_60.mac
    Run_PC3_PIP_Membrane_Case_61.mac
    Run_PC3_PIP_Membrane_Case_62.mac
    Run_PC3_PIP_Membrane_Case_63.mac
    Run_PC3_PIP_Membrane_Case_64.mac
    Run_PC3_PIP_Membrane_Case_65.mac
    Run_PC3_PIP_Membrane_Case_66.mac
    Run_PC3_PIP_Membrane_Case_67.mac
    Run_PC3_PIP_Membrane_Case_68.mac
    Run_PC3_PIP_Membrane_Case_69.mac
    Run_PC3_PIP_Cytoplasm_Case_60.mac
    Run_PC3_PIP_Cytoplasm_Case_61.mac
    Run_PC3_PIP_Cytoplasm_Case_62.mac
    Run_PC3_PIP_Cytoplasm_Case_63.mac
    Run_PC3_PIP_Cytoplasm_Case_64.mac
    Run_PC3_PIP_Cytoplasm_Case_65.mac
    Run_PC3_PIP_Cytoplasm_Case_66.mac
    Run_PC3_PIP_Cytoplasm_Case_67.mac
    Run_PC3_PIP_Cytoplasm_Case_68.mac
    Run_PC3_PIP_Cytoplasm_Case_69.mac
    Run_PC3_PIP_Solution_Case_70.mac
    Run_PC3_PIP_Solution_Case_71.mac
    Run_PC3_PIP_Solution_Case_72.mac
    Run_PC3_PIP_Solution_Case_73.mac
    Run_PC3_PIP_Solution_Case_74.mac
    Run_PC3_PIP_Solution_Case_75.mac
    Run_PC3_PIP_Solution_Case_76.mac
    Run_PC3_PIP_Solution_Case_77.mac
    Run_PC3_PIP_Solution_Case_78.mac
    Run_PC3_PIP_Solution_Case_79.mac
    Run_PC3_PIP_Membrane_Case_70.mac
    Run_PC3_PIP_Membrane_Case_71.mac
    Run_PC3_PIP_Membrane_Case_72.mac
    Run_PC3_PIP_Membrane_Case_73.mac
    Run_PC3_PIP_Membrane_Case_74.mac
    Run_PC3_PIP_Membrane_Case_75.mac
    Run_PC3_PIP_Membrane_Case_76.mac
    Run_PC3_PIP_Membrane_Case_77.mac
    Run_PC3_PIP_Membrane_Case_78.mac
    Run_PC3_PIP_Membrane_Case_79.mac
    Run_PC3_PIP_Cytoplasm_Case_70.mac
    Run_PC3_PIP_Cytoplasm_Case_71.mac
    Run_PC3_PIP_Cytoplasm_Case_72.mac
    Run_PC3_PIP_Cytoplasm_Case_73.mac
    Run_PC3_PIP_Cytoplasm_Case_74.mac
    Run_PC3_PIP_Cytoplasm_Case_75.mac
    Run_PC3_PIP_Cytoplasm_Case_76.mac
    Run_PC3_PIP_Cytoplasm_Case_77.mac
    Run_PC3_PIP_Cytoplasm_Case_78.mac
    Run_PC3_PIP_Cytoplasm_Case_79.mac
    Run_PC3_PIP_Solution_Case_80.mac
    Run_PC3_PIP_Solution_Case_81.mac
    Run_PC3_PIP_Solution_Case_82.mac
    Run_PC3_PIP_Solution_Case_83.mac
    Run_PC3_PIP_Solution_Case_84.mac
    Run_PC3_PIP_Solution_Case_85.mac
    Run_PC3_PIP_Solution_Case_86.mac
    Run_PC3_PIP_Solution_Case_87.mac
    Run_PC3_PIP_Solution_Case_88.mac
    Run_PC3_PIP_Solution_Case_89.mac
    Run_PC3_PIP_Membrane_Case_80.mac
    Run_PC3_PIP_Membrane_Case_81.mac
    Run_PC3_PIP_Membrane_Case_82.mac
    Run_PC3_PIP_Membrane_Case_83.mac
    Run_PC3_PIP_Membrane_Case_84.mac
    Run_PC3_PIP_Membrane_Case_85.mac
    Run_PC3_PIP_Membrane_Case_86.mac
    Run_PC3_PIP_Membrane_Case_87.mac
    Run_PC3_PIP_Membrane_Case_88.mac
    Run_PC3_PIP_Membrane_Case_89.mac
    Run_PC3_PIP_Cytoplasm_Case_80.mac
    Run_PC3_PIP_Cytoplasm_Case_81.mac
    Run_PC3_PIP_Cytoplasm_Case_82.mac
    Run_PC3_PIP_Cytoplasm_Case_83.mac
    Run_PC3_PIP_Cytoplasm_Case_84.mac
    Run_PC3_PIP_Cytoplasm_Case_85.mac
    Run_PC3_PIP_Cytoplasm_Case_86.mac
    Run_PC3_PIP_Cytoplasm_Case_87.mac
    Run_PC3_PIP_Cytoplasm_Case_88.mac
    Run_PC3_PIP_Cytoplasm_Case_89.mac
    Run_PC3_Flu_Solution_Case_0.mac
    Run_PC3_Flu_Solution_Case_1.mac
    Run_PC3_Flu_Solution_Case_2.mac
    Run_PC3_Flu_Solution_Case_3.mac
    Run_PC3_Flu_Solution_Case_4.mac
    Run_PC3_Flu_Solution_Case_5.mac
    Run_PC3_Flu_Solution_Case_6.mac
    Run_PC3_Flu_Solution_Case_7.mac
    Run_PC3_Flu_Solution_Case_8.mac
    Run_PC3_Flu_Solution_Case_9.mac
    Run_PC3_Flu_Solution_Case_10.mac
    Run_PC3_Flu_Solution_Case_11.mac
    Run_PC3_Flu_Solution_Case_12.mac
    Run_PC3_Flu_Solution_Case_13.mac
    Run_PC3_Flu_Solution_Case_14.mac
    Run_PC3_Flu_Solution_Case_15.mac
    Run_PC3_Flu_Solution_Case_16.mac
    Run_PC3_Flu_Solution_Case_17.mac
    Run_PC3_Flu_Solution_Case_18.mac
    Run_PC3_Flu_Solution_Case_19.mac
    Run_PC3_Flu_Solution_Case_20.mac
    Run_PC3_Flu_Solution_Case_21.mac
    Run_PC3_Flu_Solution_Case_22.mac
    Run_PC3_Flu_Solution_Case_23.mac
    Run_PC3_Flu_Solution_Case_24.mac
    Run_PC3_Flu_Solution_Case_25.mac
    Run_PC3_Flu_Solution_Case_26.mac
    Run_PC3_Flu_Solution_Case_27.mac
    Run_PC3_Flu_Solution_Case_28.mac
    Run_PC3_Flu_Solution_Case_29.mac
    Run_PC3_Flu_Solution_Case_30.mac
    Run_PC3_Flu_Solution_Case_31.mac
    Run_PC3_Flu_Solution_Case_32.mac
    Run_PC3_Flu_Solution_Case_33.mac
    Run_PC3_Flu_Solution_Case_34.mac
    Run_PC3_Flu_Solution_Case_35.mac
    Run_PC3_Flu_Solution_Case_36.mac
    Run_PC3_Flu_Solution_Case_37.mac
    Run_PC3_Flu_Solution_Case_38.mac
    Run_PC3_Flu_Solution_Case_39.mac
    Run_PC3_Flu_Solution_Case_40.mac
    Run_PC3_Flu_Solution_Case_41.mac
    Run_PC3_Flu_Solution_Case_42.mac
    Run_PC3_Flu_Solution_Case_43.mac
    Run_PC3_Flu_Solution_Case_44.mac
    Run_PC3_Flu_Solution_Case_45.mac
    Run_PC3_Flu_Solution_Case_46.mac
    Run_PC3_Flu_Solution_Case_47.mac
    Run_PC3_Flu_Solution_Case_48.mac
    Run_PC3_Flu_Solution_Case_49.mac
    Run_PC3_Flu_Solution_Case_50.mac
    Run_PC3_Flu_Solution_Case_51.mac
    Run_PC3_Flu_Solution_Case_52.mac
    Run_PC3_Flu_Solution_Case_53.mac
    Run_PC3_Flu_Solution_Case_54.mac
    Run_PC3_Flu_Solution_Case_55.mac
    Run_PC3_Flu_Solution_Case_56.mac
    Run_PC3_Flu_Solution_Case_57.mac
    Run_PC3_Flu_Solution_Case_58.mac
    Run_PC3_Flu_Solution_Case_59.mac
    Run_PC3_Flu_Solution_Case_60.mac
    Run_PC3_Flu_Solution_Case_61.mac
    Run_PC3_Flu_Solution_Case_62.mac
    Run_PC3_Flu_Solution_Case_63.mac
    Run_PC3_Flu_Solution_Case_64.mac
    Run_PC3_Flu_Solution_Case_65.mac
    Run_PC3_Flu_Solution_Case_66.mac
    Run_PC3_Flu_Solution_Case_67.mac
    Run_PC3_Flu_Solution_Case_68.mac
    Run_PC3_Flu_Solution_Case_69.mac
    Run_PC3_Flu_Solution_Case_70.mac
    Run_PC3_Flu_Solution_Case_71.mac
    Run_PC3_Flu_Solution_Case_72.mac
    Run_PC3_Flu_Solution_Case_73.mac
    Run_PC3_Flu_Solution_Case_74.mac
    Run_PC3_Flu_Solution_Case_75.mac
    Run_PC3_Flu_Solution_Case_76.mac
    Run_PC3_Flu_Solution_Case_77.mac
    Run_PC3_Flu_Solution_Case_78.mac
    Run_PC3_Flu_Solution_Case_79.mac
    Run_PC3_Flu_Solution_Case_80.mac
    Run_PC3_Flu_Solution_Case_81.mac
    Run_PC3_Flu_Solution_Case_82.mac
    Run_PC3_Flu_Solution_Case_83.mac
    Run_PC3_Flu_Solution_Case_84.mac
    Run_PC3_Flu_Solution_Case_85.mac
    Run_PC3_Flu_Solution_Case_86.mac
    Run_PC3_Flu_Solution_Case_87.mac
    Run_PC3_Flu_Solution_Case_88.mac
    Run_PC3_Flu_Solution_Case_89.mac
    vis.mac
    jobScript_C4_2_Solution.sh
    jobScript_C4_2_Membrane.sh
    jobScript_C4_2_Cytoplasm.sh
    jobScript_PC3_PIP_Solution.sh
    jobScript_PC3_PIP_Membrane.sh
    jobScript_PC3_PIP_Cytoplasm.sh
    jobScript_PC3_Flu_Solution.sh
  )

foreach(_script ${EXAMPLEB4A_SCRIPTS})
  configure_file(
    ${PROJECT_SOURCE_DIR}/${_script}
    ${PROJECT_BINARY_DIR}/${_script}
    COPYONLY
    )
endforeach()

#----------------------------------------------------------------------------
# Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
#
install(TARGETS exampleB4a DESTINATION bin)
